[workspace]
members = [
    "crates/gdpm",
    "crates/gdpm-downloader",
    "crates/gdpm-core",
    "crates/gdpm-io",
    "crates/gdpm-scaffolder",
    "crates/gdpm-types",
    "crates/gdsettings-parser",
]
resolver = "2"

[workspace.package]
version = "1.3.0-dev"

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
colored = "2.1.0"
mockall = "0.12.1"
slugify = "0.1.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"

[profile.release]
debug = 1
