[workspace]
members = [
    "crates/gdpm",
    "crates/gdpm-downloader",
    "crates/gdpm-core",
    "crates/gdpm-io",
    "crates/gdpm-scaffolder",
    "crates/gdpm-types",
    "crates/gdsettings-parser",
]
resolver = "2"

[workspace.package]
version = "1.3.0"

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
colored = "2.1.0"
mockall = "0.13.0"
slugify = "0.1.0"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[profile.release]
debug = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
