[package]
name = "gdpm"
version = "0.1.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
failure = "0.1.6"
gdsettings_parser = { path = "../gdsettings_parser" }