[package]
name = "gdpm"
version = "1.0.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
failure = "0.1.6"
dirs = "2.0.2"
slugify = "0.1.0"
question = "0.2.2"
colored = "1.8"
log = "0.4"
env_logger = "0.7.1"
fs_extra = "1.1.0"
gdsettings_parser = { path = "../gdsettings_parser" }