[package]
name = "gdpm-cli"
version = "1.2.0-dev"
edition = "2021"

[[bin]]
name = "gdpm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.5.11"
colored = "2.0.0"
gdpm-core = { path = "../gdpm-core" }
question = "0.2.2"
tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
