[package]
name = "gdpm-core"
version = "1.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
gdpm-downloader = { path = "../gdpm-downloader" }
gdpm-types = { path = "../gdpm-types" }
gdpm-io = { path = "../gdpm-io" }
gdsettings-parser = { path = "../gdsettings-parser" }
slugify = "0.1.0"
thiserror = "1.0.30"
tracing = "0.1.29"

[dev-dependencies]
indoc = "1.0.6"
mockall = "0.11.1"
