[package]
name = "gdpm-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdpm-downloader = { path = "../gdpm-downloader" }
gdpm-io = { path = "../gdpm-io" }
gdpm-scaffolder = { path = "../gdpm-scaffolder" }
gdpm-types = { path = "../gdpm-types" }
gdsettings-parser = { path = "../gdsettings-parser" }

colored = { workspace = true }
slugify = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = "2.0.4"
mockall = "0.12.0"
