[package]
name = "gdpm-downloader"
version = "1.3.0-rc1"
edition = "2021"

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
futures-util = "0.3.29"
indicatif = "0.17.7"
indoc = "2.0.4"
mockall = "0.12.0"
reqwest = { version = "0.11.22", features = ["stream"] }
soup = "0.5.1"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["rt", "macros"] }
gdsettings-parser = { path = "../gdsettings-parser" }
gdpm-types = { path = "../gdpm-types" }
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
