[package]
name = "gdpm-downloader"
version = "0.0.0"
edition = "2021"

[dependencies]
gdpm-types = { path = "../gdpm-types" }
gdsettings-parser = { path = "../gdsettings-parser" }

async-recursion = "1.0.5"
async-trait = "0.1.74"
futures-util = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.35.0", features = ["rt", "macros"] }

mockall = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
