[package]
name = "gdpm-downloader"
version = "0.0.0"
edition = "2021"

[dependencies]
gdpm-types = { path = "../gdpm-types" }
gdsettings-parser = { path = "../gdsettings-parser" }

async-recursion = "1.1.1"
async-trait = "0.1.81"
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["stream", "json"] }
tokio = { version = "1.39.3", features = ["rt", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

mockall = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
