[package]
name = "gdpm-io"
version = "1.3.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
fs_extra = "1.3.0"
mockall = "0.12.0"
remove_dir_all = "0.8.2"
thiserror = "1.0.50"
tracing = "0.1.40"
zip = "0.6.6"
