[package]
name = "gdpm-io"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
fs_extra = "1.3.0"
remove_dir_all = "0.8.2"
zip = "0.6.6"

colored = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }