[package]
name = "gdpm-scaffolder"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdpm-io = { path = "../gdpm-io" }
gdpm-types = { path = "../gdpm-types" }
gdsettings-parser = { path = "../gdsettings-parser" }

thiserror = { workspace = true }
