[package]
name = "gdpm-testutils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdpm-io = { path = "../gdpm-io" }
gdpm-types = { path = "../gdpm-types" }

tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-case = "3.3.1"
