[package]
name = "gdpm"
version = "1.0.1"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdsettings-parser = { path = "../gdsettings-parser" }
argh = "0.1.6"
colored = "1.8"
dirs = "2.0.2"
fs_extra = "1.1.0"
question = "0.2.2"
slugify = "0.1.0"
structopt = "0.3"
thiserror = "1.0.30"
color-eyre = "0.5.11"
