[package]
name = "gdpm"
version = { workspace = true }
edition = "2021"

[[bin]]
name = "gdpm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
gdpm-core = { path = "../gdpm-core" }
question = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

colored = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
