[package]
name = "gdsettings-parser"
version = "0.1.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
