[package]
name = "gdsettings-parser"
version = "0.0.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"

thiserror = { workspace = true }
